--- a/src/app/pages/movies/movies-popup/movies-popup.component.html
+++ b/src/app/pages/movies/movies-popup/movies-popup.component.html
@@ -4,7 +4,7 @@
     
      <div class="row">
 
-       <div class="pr-1 col-6">
+       <div class="pr-1 col-4">
          <mat-form-field class="w-100" appearance="outline">
            <mat-label>Titulo de la Pelicula</mat-label>
            <input
@@ -40,7 +40,7 @@
      
       </div>
 
-      <div class="pr-1 col-4">
+      <div class="pr-1 col-2">
         <mat-form-field class="w-100" appearance="outline">
           <mat-label>Director</mat-label>
           <input
@@ -58,6 +58,31 @@
         </mat-form-field>
       </div>
 
+      <div class="pr-1 col-2">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Duración</mat-label>
+          <input
+            matInput
+            name="duration"
+            formControlName="duration"
+            placeholder=""
+            type="number"
+          >
+          <mat-error *ngIf="itemForm.controls['duration'].hasError('required')">
+            Duracion es requerida
+          </mat-error>
+         <!--  <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+            El nombre debe tener un mínimo de 3 caracteres
+          </mat-error> -->
+        </mat-form-field>
+      </div>
+
+      <div class="pr-1 col-2">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Ranking</mat-label>
+          <input matInput name="score_average" formControlName="score_average" placeholder="Ranking">
+        </mat-form-field>
+      </div>
  
      </div>
 
