--- a/src/app/pages/series/series-popup/series-popup.component.html
+++ b/src/app/pages/series/series-popup/series-popup.component.html
@@ -1,1 +1,398 @@
-<p>series-popup works!</p>
+<h1 matDialogTitle>{{data.title}}</h1>
+ 
+    <mat-accordion>
+        <mat-expansion-panel [expanded]="true" >
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+            <strong>Informacion de la serie</strong>
+            </mat-panel-title>
+            <mat-panel-description>
+              Expandir para editar la informacion de la Serie
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <form [formGroup]="itemForm">
+          <div class="row">
+     
+            <div class="pr-1 col-5">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Titulo de la Serie</mat-label>
+                <input
+                  matInput
+                  name="name"
+                  formControlName="name"
+                  placeholder="Titulo de la Serie"
+                >
+                <mat-error *ngIf="itemForm.controls['name'].hasError('required')">
+                 Titulo de la Serie es requerido
+                </mat-error>
+                <!-- <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                  El nombre debe tener un mínimo de 3 caracteres
+                </mat-error> -->
+              </mat-form-field>
+            </div>
+     
+            <div class="pr-1 col-2">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>Año de la Serie</mat-label>
+               <input
+                 matInput
+                 name="year"
+                 type="number"
+                 formControlName="year"
+                 placeholder="2020"
+                 minlength="4"
+               >
+               <mat-error *ngIf="itemForm.controls['year'].hasError('required')">
+                 Año es requerido
+               </mat-error>
+             </mat-form-field> 
+          
+           </div>
+     
+           <div class="pr-1 col-3">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>Director</mat-label>
+               <input
+                 matInput
+                 name="director"
+                 formControlName="director"
+                 placeholder="Director"
+               >
+               <mat-error *ngIf="itemForm.controls['director'].hasError('required')">
+                 Director es requerido
+               </mat-error>
+              <!--  <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+
+           <div class="pr-1 col-2">
+            <mat-form-field class="w-100" appearance="outline">
+              <mat-label>Ranking</mat-label>
+              <input matInput name="score_average" formControlName="score_average" placeholder="Ranking">
+            </mat-form-field>
+          </div>
+     
+      
+          </div>
+     
+          <p><strong>Imagenes de la Serie</strong></p>
+          <div class="row">
+     
+           <div class="pr-1 col-4">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>Poster URL (Miniatura)</mat-label>
+               <input
+                 matInput
+                 name="poster_url"
+                 formControlName="poster_url"
+                 placeholder="Poster URL"
+               >
+               <mat-error *ngIf="itemForm.controls['poster_url'].hasError('required')">
+                 Poster URL (Miniatura) es requerido
+               </mat-error>
+               <!-- <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+     
+           <div class="pr-1 col-4">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>Landscape Poster URL (Imagen Grande)</mat-label>
+               <input
+                 matInput
+                 name="landscape_poster_url"
+                 formControlName="landscape_poster_url"
+                 placeholder="Landscape Poster URL"
+               >
+              <mat-error *ngIf="itemForm.controls['landscape_poster_url'].hasError('required')">
+               Landscape Poster URL es requerido
+               </mat-error>
+               <!--  <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+     
+           <div class="pr-1 col-4">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>URL Imagen (apartado Mas Info) </mat-label>
+               <input
+                 matInput
+                 name="thumb"
+                 formControlName="thumb"
+                 placeholder="URL Imagen (apartado Mas Info) "
+               >
+               <mat-error *ngIf="itemForm.controls['thumb'].hasError('required')">
+                 URL Imagen es requerido
+               </mat-error>
+               <!-- <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+     
+           
+     
+          </div>
+     
+          <p><strong>Video y Trailer de la Serie</strong></p>
+          <div class="row">
+     
+           <div class="pr-1 col-3">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>URL Serie</mat-label>
+               <input
+                 matInput
+                 name="resource_file_url"
+                 formControlName="resource_file_url"
+                 placeholder="URL Serie"
+               >
+               <mat-error *ngIf="itemForm.controls['resource_file_url'].hasError('required')">
+                 URL Serie es requerido
+               </mat-error>
+               <!-- <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+           <div class="pr-1 col-3">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>URL del Trailer</mat-label>
+               <input
+                 matInput
+                 name="resource_trailer_file_url"
+                 formControlName="resource_trailer_file_url"
+                 placeholder="URL del Trailer"
+               >
+                <mat-error *ngIf="itemForm.controls['resource_trailer_file_url'].hasError('required')">
+                 URL del Trailer es requerido
+               </mat-error>
+               <!--<mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+     
+           <div class="pr-1 col-3">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>Nombre del Archivo video</mat-label>
+               <input
+                 matInput
+                 name="resource_file_name"
+                 formControlName="resource_file_name"
+                 placeholder="Nombre del Archivo video"
+               >
+               <!-- <mat-error *ngIf="itemForm.controls['name'].hasError('required')">
+                 Nombre es requerido
+               </mat-error>
+               <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+     
+           <div class="pr-1 col-3">
+             <mat-form-field class="w-100" appearance="outline">
+               <mat-label>Nombre del Archivo Trailer</mat-label>
+               <input
+                 matInput
+                 name="resource_trailer_file_name"
+                 formControlName="resource_trailer_file_name"
+                 placeholder="Nombre del Archivo Trailer"
+               >
+               <!-- <mat-error *ngIf="itemForm.controls['name'].hasError('required')">
+                 Nombre es requerido
+               </mat-error>
+               <mat-error *ngIf="itemForm.controls['name'].hasError('minlength')">
+                 El nombre debe tener un mínimo de 3 caracteres
+               </mat-error> -->
+             </mat-form-field>
+           </div>
+     
+           
+           
+          </div>
+          <div class="row">
+            
+           <div class="pr-1 col" *ngIf="genders.length > 0">
+           
+             <ng-multiselect-dropdown #multiSelect  [placeholder]="'Selecciona los generos' "[settings]="settings"
+               [data]="genders" formControlName="genders"  (onSelect)="onItemSelect($event)">
+             </ng-multiselect-dropdown>
+           
+             <span *ngIf="itemForm.controls['genders'].errors?.required" style="color: #f44336; padding: 0 1em; font-size: 75%;">
+               Generos son requeridos
+             </span>
+           
+           </div>
+     
+           <div class="pr-1 col-6">
+             <mat-form-field class="w-100" appearance="fill">
+              <mat-label>Artistas</mat-label>
+              <mat-chip-list #chipList aria-label="Seleccion de Autor" formControlName="artists" >
+                <mat-chip *ngFor="let artist of artists" [selectable]="selectable"
+                         [removable]="removable" (removed)="remove(artist)">
+                  {{artist.name}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input placeholder="Nuevo Actor..."
+                       [matChipInputFor]="chipList"
+                       [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                       [matChipInputAddOnBlur]="addOnBlur"
+                       (matChipInputTokenEnd)="add($event)">
+              </mat-chip-list>
+     
+             <mat-error *ngIf="chipList.errorState">Debe ingresar artistas</mat-error>
+            </mat-form-field>
+     
+           </div>
+          </div>
+     
+          <div class="row">
+            <div class="col-12">
+             <div class="pr-1 col">
+               <mat-form-field class="w-100" appearance="outline">
+                 <mat-label>Descripción</mat-label>
+                 <textarea
+                   matInput
+                   name="description"
+                   formControlName="description"
+                   placeholder="Descripción de la Serie"
+                 ></textarea>
+                 <mat-error *ngIf="itemForm.controls['description'].hasError('required')">
+                   Descripción es requerida
+                 </mat-error>
+              
+               </mat-form-field>
+             </div>
+            </div>
+          </div>
+         </form> 
+        </mat-expansion-panel>
+    <mat-accordion>
+
+     <!-- Temporadas --> <!-- /////////////////////////////////////////////////////////////////////////// -->
+     <div class="row d-flex justify-content-between mt-2" *ngIf="isNew">
+         <div class="col">
+            <p><strong>Temporadas</strong></p> 
+         </div>
+         <div class="col ">
+            <button type="button" mat-raised-button color="primary" (click)="addSeason()">
+               Añadir Temporada <mat-icon>note_add</mat-icon>
+            </button>
+         </div>
+     </div>
+     <!-- Inputs -->
+     <hr>
+     <mat-accordion *ngFor="let season of this.itemForm?.value.seasons; let i=index">
+      <mat-expansion-panel >
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <strong>Temporada {{i+1}}</strong>  
+          </mat-panel-title>
+          <mat-panel-description>
+           Expandir esta Temporada
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div class="row">
+          <div class="col-3">
+            <mat-form-field class="w-100" appearance="fill">
+                <mat-label>Nombre de temporada</mat-label>
+                <input matInput placeholder="Nombre de temporada" [(ngModel)]="this.itemForm?.value.seasons[i].name">
+              </mat-form-field>
+         </div>
+         <div class="col-2">
+            <mat-form-field class="w-100" appearance="fill">
+                <mat-label>Temporada Nro:</mat-label>
+                <input matInput type="number" placeholder="1" [(ngModel)]="this.itemForm?.value.seasons[i].season_number">
+              </mat-form-field>
+         </div>
+         <div class="col-2">
+            <mat-form-field class="w-100" appearance="fill">
+                <mat-label>Año:</mat-label>
+                <input matInput type="number" placeholder="2020" [(ngModel)]="this.itemForm?.value.seasons[i].year" >
+              </mat-form-field>
+         </div> 
+         <div class="col-3 d-flex align-items-center">
+            <p class="mb-0"><strong>Eliminar Temporada</strong></p>
+            <button style="margin-left: 15px;" type="button" mat-mini-fab color="primary" aria-label="" (click)="deleteSeason(i)">
+               <mat-icon>delete</mat-icon>
+           </button>
+        </div>
+         <div class="col-12"><!-- Capitulos -->
+            <div class="row d-flex justify-content-center">
+                <div class="col-1">
+                   <p><strong>Capitulos</strong></p> 
+                </div>
+                <div class="col-1">
+                   <button type="button" mat-raised-button (click)="addChapter(i)" >
+                      Añadir Capitulo <mat-icon>note_add</mat-icon>
+                   </button>
+                </div>
+            </div>
+            <!-- Inputs de Capitulos -->
+            <div class="row" *ngFor="let season of this.itemForm?.value.seasons[i].chapters; let subI=index">
+                <div class="col-2">
+                    <mat-form-field class="w-100" appearance="fill">
+                        <mat-label>Numero del Capitulo:</mat-label>
+                        <input matInput type="number" placeholder="#" [(ngModel)]="this.itemForm?.value.seasons[i].chapters[subI].chapter_number" >
+                      </mat-form-field>
+                 </div> 
+                <div class="col-5">
+                    <mat-form-field class="w-100" appearance="fill">
+                        <mat-label>Nombre del Capitulo</mat-label>
+                        <input matInput placeholder="Nombre del capitulo" [(ngModel)]="this.itemForm?.value.seasons[i].chapters[subI].name">
+                      </mat-form-field>
+                 </div>
+        
+                 <div class="col-2">
+                    <mat-form-field class="w-100" appearance="fill">
+                        <mat-label>Año:</mat-label>
+                        <input matInput type="number" placeholder="2020" [(ngModel)]="this.itemForm?.value.seasons[i].chapters[subI].year" >
+                      </mat-form-field>
+                 </div> 
+                 
+                 <div class="col">
+                    <button type="button" mat-raised-button (click)="deleteChapter(i,subI)" >
+                        <strong>X</strong>
+                     </button>
+                 </div>
+                 <div class="col-4">
+                  <mat-form-field class="w-100" appearance="fill">
+                      <mat-label>URL del Video Capitulo</mat-label>
+                      <input matInput placeholder="URL del Video Capitulo" [(ngModel)]="this.itemForm?.value.seasons[i].chapters[subI].resource_file_url">
+                    </mat-form-field>
+               </div>
+                 <div class="col-8">
+                  <mat-form-field class="w-100" appearance="fill">
+                      <mat-label>Descripción del Capitulo</mat-label>
+                      <textarea matInput placeholder="Descripcion del capitulo" [(ngModel)]="this.itemForm?.value.seasons[i].chapters[subI].description"></textarea>
+                    </mat-form-field>
+               </div>
+               <hr style="height: 3px;">
+            </div>
+         </div><!-- Capitulos -->
+
+        </div>
+       <hr>
+      </mat-expansion-panel>
+
+    </mat-accordion>
+     <!-- Temporadas --> <!-- /////////////////////////////////////////////////////////////////////////// -->
+   
+         <div fxFlex="100" class="mt-1">
+           <div class="row d-flex justify-content-between">
+             <div class="col-2">
+              <button class="btn btn-primary" type="button" (click)="submit()"  [disabled]="itemForm.invalid" > Guardar </button>
+             </div>
+
+             <div class="col-2">
+              <button (click)="dialogRef.close(false)" type="button" class="btn btn-danger">Cancelar </button>
+
+             </div>
+           </div>
+         </div>
+    
