--- a/src/app/pages/series/series.component.html
+++ b/src/app/pages/series/series.component.html
@@ -1,1 +1,76 @@
-<p>series works!</p>
+<div class="row pt-2 ">
+    <div class="col-12">
+        <button type="button" class="btn btn-dark me-3" (click)="openPopUpSerie({}, true)">Agregar una Serie completa</button>
+        <button type="button" class="btn btn-primary me-3" (click)="openPopUpSeasons(false)">Agregar una Temporada</button>
+        <button type="button" class="btn btn-primary me-3" (click)="openPopUpChapters(false)">Agregar un capitulo</button>
+    </div>
+
+    <div class="col-12 pt-3">
+        <div class="mat-elevation-z8" *ngIf="dataSource">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
+    
+           
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef><strong>Titulo</strong>  </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="year">
+                  <th mat-header-cell *matHeaderCellDef><strong>Año</strong>   </th>
+                  <td mat-cell *matCellDef="let element"> {{element.year}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="director">
+                  <th mat-header-cell *matHeaderCellDef><strong>Director</strong>   </th>
+                  <td mat-cell *matCellDef="let element"> {{element.director}} </td>
+                </ng-container>
+              
+
+                <ng-container matColumnDef="score_average">
+                  <th mat-header-cell *matHeaderCellDef><strong>Calificación</strong>   </th>
+                  <td mat-cell *matCellDef="let element"> {{element.score_average}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="seasons">
+                  <th mat-header-cell *matHeaderCellDef><strong>Temporadas</strong>   </th>
+                  <td mat-cell *matCellDef="let element"> {{element.seasons.length}} </td>
+                </ng-container>
+
+
+                <ng-container matColumnDef="acciones">
+                  <th mat-header-cell *matHeaderCellDef><strong>Acciones</strong>   </th>
+                  <td mat-cell *matCellDef="let element"> 
+
+                    <button mat-mini-fab style="margin-right: 10px;" color="primary" (click)="openPopUpSerie(element)" matTooltip="Editar Serie" >
+                      <mat-icon>create</mat-icon>
+                    </button>
+
+                    <button mat-mini-fab style="margin-right: 10px;background-color: #ffffff;"  matTooltip="Temporadas">
+                      <mat-icon>video_library</mat-icon>
+                    </button>
+                    
+                    <button mat-mini-fab style="margin-right: 10px;background-color: #ffffff;" matTooltip="Capitulos">
+                      <mat-icon>subscriptions</mat-icon>
+                    </button>    
+                
+                    <button mat-mini-fab color="warn" (click)="deleteItem(element)" matTooltip="Eliminar serie completa" >
+                      <mat-icon>delete</mat-icon>
+                    </button>
+
+                  </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+
+            <mat-paginator showFirstLastButtons [pageSize]="10" [length]="dataSource.data.length" class="">
+            </mat-paginator>
+
+        </div>
+    </div>
+</div>
+
+
+
+
