se pueden editar los sliders principales de Peliculas y series

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,18 @@
               Series
             </a>
           </li>
+
+          <li>
+            <a routerLink="slider-movies" routerLinkActive="active" class="nav-link text-white">
+              Editar Slider de Peliculas
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="slider-series" routerLinkActive="active" class="nav-link text-white">
+              Editar Slider de Series
+            </a>
+          </li>
         
         </ul>
         <hr>
