Se añadio seccion ya integrada para editar SLiders del Inicio de Gomovie

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,12 @@
               Editar Slider de Series
             </a>
           </li>
+
+          <li>
+            <a routerLink="slider-home" routerLinkActive="active" class="nav-link text-white">
+              Editar Slider de Inicio
+            </a>
+          </li>
         
         </ul>
         <hr>
