Se agregan mediante carga de imagenes en los Capitulos de Series

--- a/src/app/pages/series/series-popup/series-popup.component.html
+++ b/src/app/pages/series/series-popup/series-popup.component.html
@@ -319,7 +319,7 @@
     <mat-accordion>
 
      <!-- Temporadas --> <!-- /////////////////////////////////////////////////////////////////////////// -->
-     <div class="row d-flex justify-content-between mt-2" *ngIf="isNew">
+     <!-- <div class="row d-flex justify-content-between mt-2" *ngIf="isNew">
          <div class="col">
             <p><strong>Temporadas</strong></p> 
          </div>
@@ -328,7 +328,7 @@
                Añadir Temporada <mat-icon>note_add</mat-icon>
             </button>
          </div>
-     </div>
+     </div> -->
      <!-- Inputs -->
      <hr>
      <mat-accordion *ngFor="let season of this.itemForm?.value.seasons; let i=index">
