--- a/src/app/pages/series/series.component.html
+++ b/src/app/pages/series/series.component.html
@@ -1,6 +1,6 @@
 <div class="row pt-2 ">
     <div class="col-12 d-flex align-items-center">
-        <button type="button" class="btn btn-dark me-3" (click)="openPopUpSerie({}, true)">Agregar una Serie completa</button>
+        <button type="button" class="btn btn-dark me-3" (click)="openPopUpSerie({}, true)">Agregar una Serie</button>
         <button type="button" class="btn btn-primary me-3" (click)="openPopUpSeasons(false)">Agregar una Temporada</button>
         <button type="button" class="btn btn-primary me-3" (click)="openPopUpChapters(false)">Agregar un capitulo</button>
         <button class="btn btn-success d-flex align-items-center me-3" type="button" (click)="exportJSON()"><mat-icon aria-hidden="false" >data_object</mat-icon> Exportar JSON </button>
