--- a/src/app/pages/series/update-chapters-popup/update-chapters-popup.component.html
+++ b/src/app/pages/series/update-chapters-popup/update-chapters-popup.component.html
@@ -38,7 +38,7 @@
 
     <div class="row">
 
-      <div class="pr-1 col-5">
+      <div class="pr-1 col-6">
         <mat-form-field class="w-100" appearance="outline">
           <mat-label>Nombre</mat-label>
           <input
@@ -56,7 +56,7 @@
         </mat-form-field>
       </div>
 
-      <div class="pr-1 col-2">
+      <div class="pr-1 col-3">
        <mat-form-field class="w-100" appearance="outline">
          <mat-label>Año</mat-label>
          <input
@@ -91,12 +91,12 @@
          
       </div>
 
-      <div class="pr-1 col-2">
+      <!-- <div class="pr-1 col-2">
         <mat-form-field class="w-100" appearance="outline">
           <mat-label>Ranking</mat-label>
           <input matInput name="chapter_number" type="number" formControlName="chapter_number" placeholder="#">
         </mat-form-field>
-      </div>
+      </div> -->
     </div>
 
     <div class="row">
